DataViews list layout: apply focus styles to items on `focus-visible` rather than `focus` (#60253)
Co-authored-by: jameskoster <jameskoster@git.wordpress.org>
Co-authored-by: jasmussen <joen@git.wordpress.org>
Co-authored-by: oandregal <oandregal@git.wordpress.org>

--- a/src/style.scss
+++ b/src/style.scss
@@ -421,7 +421,7 @@
 		width: 100%;
 		scroll-margin: $grid-unit-10 0;
 
-		&:focus {
+		&:focus-visible {
 			&::before {
 				position: absolute;
 				content: "";
