--- a/src/style.scss
+++ b/src/style.scss
@@ -339,6 +339,7 @@
 			height: 100%;
 			box-shadow: inset 0 0 0 $border-width rgba(0, 0, 0, 0.1);
 			border-radius: $grid-unit-05;
+			pointer-events: none;
 		}
 	}
 
