--- a/src/style.scss
+++ b/src/style.scss
@@ -401,6 +401,7 @@
 	li {
 		margin: 0;
 		cursor: pointer;
+		border-top: 1px solid $gray-100;
 
 		.dataviews-view-list__item-wrapper {
 			position: relative;
@@ -408,6 +409,18 @@
 
 			> * {
 				width: 100%;
+			}
+		}
+
+		.dataviews-view-list__item-actions .components-button {
+			opacity: 0;
+		}
+
+		&.is-selected,
+		&.is-hovered,
+		&:focus-within {
+			.dataviews-view-list__item-actions .components-button {
+				opacity: 1;
 			}
 		}
 
@@ -426,6 +439,7 @@
 				}
 			}
 		}
+
 	}
 
 	li.is-selected,
@@ -443,10 +457,9 @@
 	}
 
 	.dataviews-view-list__item {
-		padding: $grid-unit-20 $grid-unit-40;
+		padding: $grid-unit-20 0 $grid-unit-20 $grid-unit-40;
 		width: 100%;
 		scroll-margin: $grid-unit-10 0;
-		border-top: 1px solid $gray-100;
 
 		&:focus-visible {
 			&::before {
@@ -512,6 +525,11 @@
 				display: none;
 			}
 		}
+	}
+
+	.dataviews-view-list__item-actions {
+		padding-top: $grid-unit-20;
+		padding-right: $grid-unit-40;
 	}
 
 	& + .dataviews-pagination {
