Data Views: Bulk toolbar covering other clickable elements (#62333)
* Fix bulk toolbar position on scroll

* fix bulk toolbar taking full width and constraining clicks on elements it overlays

--- a/src/style.scss
+++ b/src/style.scss
@@ -886,12 +886,14 @@
 }
 
 .dataviews-bulk-actions {
-	position: absolute;
+	position: sticky;
 	display: flex;
 	flex-direction: column;
 	align-content: center;
 	flex-wrap: wrap;
-	width: 100%;
+	width: fit-content;
+	margin-left: auto;
+	margin-right: auto;
 	bottom: $grid-unit-30;
 	z-index: z-index(".dataviews-bulk-actions");
 
