DataViews: Support combined fields (#63236)
Co-authored-by: youknowriad <youknowriad@git.wordpress.org>
Co-authored-by: jameskoster <jameskoster@git.wordpress.org>

--- a/src/style.scss
+++ b/src/style.scss
@@ -91,7 +91,7 @@
 		padding: $grid-unit-15;
 		white-space: nowrap;
 
-		&[data-field-id="actions"] {
+		&.dataviews-view-table__actions-column {
 			text-align: right;
 		}
 
@@ -214,6 +214,10 @@
 					flex-grow: 0;
 				}
 			}
+		}
+
+		.components-v-stack > .dataviews-view-table__cell-content-wrapper:not(:first-child) {
+			min-height: 0;
 		}
 	}
 	.dataviews-view-table-header-button {
