Fix selected row styles in table layout (#63811)
Co-authored-by: jameskoster <jameskoster@git.wordpress.org>
Co-authored-by: youknowriad <youknowriad@git.wordpress.org>

--- a/src/layouts/table/style.scss
+++ b/src/layouts/table/style.scss
@@ -92,7 +92,7 @@
 			}
 		}
 
-		&.is-ed {
+		&.is-selected {
 			background-color: rgba(var(--wp-admin-theme-color--rgb), 0.04);
 			color: $gray-700;
 
