--- a/src/dataviews-layouts/list/style.scss
+++ b/src/dataviews-layouts/list/style.scss
@@ -33,7 +33,7 @@ ul.dataviews-view-list {
 			.dataviews-view-list__item-actions {
 				flex-basis: min-content;
 				overflow: unset;
-				margin-inline: $grid-unit-10 0;
+				padding-inline-end: $grid-unit-05;
 
 				.components-button {
 					opacity: 1;
